--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="black-click">Click Me!</button>
-    <button class="yellow-click">No, Click Me!</button>
+    <button class="black click">Click Me!</button>
+    <button class="yellow click">No, Click Me!</button>
   </body>
 </html>
